--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
         <!-- Full Screen Video Background -->
           <div id="fs-video-one-bg" class="player" 
                data-property="{videoURL:'http://youtu.be/LwvPb3y21Ko',containment:'.fs-video-hero',autoPlay:true, mute:true, startAt:0, stopAt: 13, opacity:1, addRaster:true, quality:'large', optimizeDisplay:true}">
-          </div> <!-- Fillon menjehere pas hero img nga sekonda 0 deri tek 13 dhe perseritet -->
+          </div> 
 
  
 
          <!-- Overlay Pattern --> 
           <div class="overlay-pattern" style="background: url('assets/images/hero/overlay-pattern.png');">
-          	 <!-- pattern qe perseritet ne formen e pikes-->
+          	
           </div>
 
           <div class="bg-overlay">
@@ -344,7 +344,7 @@
 
                 <div class="col-md-4">
                   <small><a href="#page-top" class="pull-right to-the-top">Top<i class="fa fa-angle-up"></i></a></small>
-                </div> <!-- shkon ne page-top me auto scroll -->
+                </div> 
 
               </div>
             </div>
